# spc

./: .gitignore  CMakeLists.txt  GRAMMAR  Makefile  README  TODO  WHATSNEW.TXT  build.bat  build.sh  clean.bat  clean.sh  clear.bat  clear.sh  common.py  configure.bat  configure.sh  constants.py  createlink.sh  difft.bat  errors.py  exceptions.py  keywords  output.py  prepare.bat  pychecker.bat  pychecker.sh  runpy.bat  simplesynanalyzer.py  spc.bat  spc.py  spc.sh  sym.py  syn.py  synanalyzer.py  synout.py  test.bat  test.sh  testall.sh  tester.py  todo  (+4 more)
asm/: ccall.inc  fasm  nix32header.asm  win32header.asm
cmake/modules/: FindPyInstaller.cmake
common/: errors.py
lib/: __init__.py  enum.py
src/: .gitignore  setup.py  spc.py  tester.py  version.py
src/common/: __init__.py  errors.py  functions.py
src/syn/: __init__.py  expressions.py  full.py  printer.py  simple.py  sym.py  table.py  tree.py
src/tok/: printer.py  token.py  tokenizer.py
syn/: __init__.py  analyzer.py  printer.py  simple.py
tests/: .gitignore
tests/decl/: 000.ans  001.ans  002.ans  003.ans  004.ans  004.in  005.ans  006.ans  006.tst  007.ans  007.in  008.ans  008.tst  009.ans  009.in  010.ans  010.in  011.ans  011.in  012.ans  012.in  013.ans  014.ans  014.in  015.ans  015.tst  016.ans  016.in  017.ans  017.in  018.ans  018.tst  019.ans  019.in  020.ans  020.tst  021.ans  021.in  022.ans  023.ans  (+39 more)
tests/expr/: 002.a.dot  003.ans  003.in  004.ans  005.ans  005.tst  006.a.dot  006.in  007.a.dot  008.a.dot  009.ans  010.a.dot  014.in  (+8 more)
tok/: __init__.py  printer.py  token.py  tokenizer.py
(+436 files in other folders)
