cmake_minimum_required (VERSION 2.8.0)

PROJECT (spc)
SET (APP_SHORTNAME spc)
SET (APP_VERSION 0.01)

SET (SOURCE_DIR ${PROJECT_SOURCE_DIR}/src)
SET (TARGET ${SOURCE_DIR}/${APP_SHORTNAME}.py)
SET (DISTFILES ${PROJECT_SOURCE_DIR}/LICENSE ${PROJECT_SOURCE_DIR}/WHATSNEW.TXT)

IF (WIN32)
    SET (DISTNAME ${CMAKE_PROJECT_NAME}-${APP_VERSION}-bin-win32)
ELSE (WIN32)
    SET (DISTNAME ${CMAKE_PROJECT_NAME}-${APP_VERSION}-bin-linux)
ENDIF (WIN32)

# configure (add version number)
#CONFIGURE_FILE (
#  ${SOURCE_DIR}/version.in
#  ${SOURCE_DIR}/version.py
#)

SET (EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
SET (LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})

SET (CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/modules ${CMAKE_MODULE_PATH})

ADD_SUBDIRECTORY (${SOURCE_DIR})

# Look for PyInstaller
FIND_PACKAGE (PyInstaller REQUIRED)
INCLUDE (UsePyInstaller)

SET_SOURCE_FILES_PROPERTIES (${TARGET} PROPERTIES PYTHONPATH ${SOURCE_DIR})
SET_SOURCE_FILES_PROPERTIES (${TARGET} PROPERTIES DEBUG OFF)
SET_SOURCE_FILES_PROPERTIES (${TARGET} PROPERTIES FILE_DEPLOYMENT ON)
SET_SOURCE_FILES_PROPERTIES (${TARGET} PROPERTIES WINDOWED OFF)
SET_SOURCE_FILES_PROPERTIES (${TARGET} PROPERTIES STRIP OFF)
SET_SOURCE_FILES_PROPERTIES (${TARGET} PROPERTIES UPX ON)
ADD_PI_EXECUTABLE (${APP_SHORTNAME} ${TARGET})
